--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,3 +12,36 @@ $fa-font-path: "../webfonts" !default;
 ul{
     list-style-type: none;
 }
+#admin{
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    #sidebar{
+        width: 300px;
+        height: 100%;
+        background-color: black;
+        color: white;
+        overflow-y: auto;
+        a{
+            color: white;
+        }
+        a:hover{
+            color: lightgray;
+        }
+    }
+    #wrapper{
+        background-color: lightgray;
+        width: calc(100% - 300px);
+        height: 100%;
+        overflow-y: auto;
+        margin-top: 70px;
+        header{
+            height: 70px;
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: calc(100% - 300px);
+            z-index: 100;
+        }
+    }
+}
