error whit function

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,6 +12,9 @@ $fa-font-path: "../webfonts" !default;
 ul{
     list-style-type: none;
 }
+a{
+    text-decoration: none;
+}
 #admin{
     height: 100vh;
     overflow: hidden;
