--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -31,8 +31,9 @@ a{
         a{
             color: white;
         }
-        a:hover{
-            color: lightgray;
+        li:hover,
+        summary:hover{
+            background-color: rgba(160, 160, 160, 0.37);
         }
     }
     #wrapper{
@@ -48,6 +49,20 @@ a{
             right: 0;
             width: calc(100% - 300px);
             z-index: 100;
+            #user-image{
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                margin: 0px 10px;
+                background-color: chocolate;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                span{
+                    font-size: 14px;
+                    font-weight: bold;
+                }
+            }
         }
     }
      
