--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -50,6 +50,7 @@ a{
         #other-pages{
            padding: 10px 0 10px 20px;
            position: relative;
+           cursor: pointer;
            .menu-arrow{
                position: absolute;
                right: 15px;
@@ -62,6 +63,9 @@ a{
                 transform: rotate(-90deg); /* Ad esempio, ruota di 90 gradi */
                 transition: transform 0.3s ease-in-out; /* Aggiungi una transizione per un effetto più fluido */
             }
+       }
+       #page-layouts{
+        cursor: pointer;
        }
         
     }
