--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -35,7 +35,7 @@ a{
     #sidebar{
         width: 300px;
         height: 100%;
-        background-color: black;
+        background-color: #0C7CEC !important;
         color: white;
         overflow-y: auto;
         a{
@@ -114,7 +114,11 @@ a{
         }
         #wrapper{
             width: calc(100% - 70px);
+            header{
+                width: calc(100% - 70px);
+            }
         }
+
     }
 
 
