--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,6 +7,7 @@ $fa-font-path: "../webfonts" !default;
 @import '~@fortawesome/fontawesome-free/scss/solid.scss';
 @import '~@fortawesome/fontawesome-free/scss/brands.scss';
 
+
 @import '~bootstrap/scss/bootstrap';
 
 ul{
@@ -20,7 +21,7 @@ a{
     display: none;
 }
 .fa-eye:hover{
-    color: blue;
+    color: $primary;
 }
 .fa-pen:hover{
     color: green;
