--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -29,6 +29,10 @@ a{
 .fa-trash:hover{
     color: red;
 }
+#uploadPreview{
+    width: 200px;
+    
+}
 #admin{
     height: 100vh;
     overflow: hidden;
@@ -76,6 +80,7 @@ a{
         height: 100%;
         overflow-y: auto;
         margin-top: 70px;
+        padding-bottom: 70px;
         header{
             height: 70px;
             position: fixed;
